--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -28,70 +28,85 @@
       #   - Description 1.
       #   - Description 2.
 
-- title: Experience
+- title: Technical Projects
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: AWS S3 File Upload 
+      year: 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - Implemented back-end APIs using Spring Boot
+        - Developed front-end using ReactJS
+        - Leveraged AWS S3 Buckets to upload user profile pictures
+        - Integrated with GitHub Actions for Continuous Integration and Continuous Deployment
+        - Deployed to AWS Elastic Beanstalk
+
+    - title: Serverless vs Serverful Performance of an Ecommerce Application
+      year: 2023
+      description:
+        - Performed system design and architected cloud solution
+        - Effectively communicated trade-offs between different solutions
+        - Deployed serverless and serverful MongoDB and AmazonRDS
+        - Utilized gRPC and Go to perform inter-service communication
+        - Architected multicloud database solution as GCP didn't support serverless database
+        - title: Observations
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+            - p50 response time is faster for serverless
+            - p95 and p99 response times are quicker by approximately 25% and 10.7% for serverful
+            - One possible explanation for these disparities could be the varying resource allocation in serverless, as resources are often shared among multiple functions
+
+- title: Technical Experience
+  type: time_table
+  contents:
+    - title: Software Engineer
+      institution: ANQ Digital Finserv Private Limited
+      year: Jun 2022 - Aug 2022
       description:
-        - Description 1.
-        - Description 2.
+        -  Developed the website and mobile application with Next.js and react native respectively
+        - Implemented a back-end APIs using Deno.js to check credit score
+        - Effectively communicated with UI/UX and production teams
+        - Worked under strong deadlines as an individual contributor
+        - Managed an intern for web page development
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Software Engineer
+      institution: Subex Limited
+      year: Mar 2021 - Mar 2022
       description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+        - Utilized Angular to develop multiple web components
+        - Implemented Jasmine for Test-driven Development in Angular 
+        - Updated CI/CD bash scripts which prevented creation of Keycloak Database
+        - Developed multiple REST APIs using Spring Boot
+        - Provided sessions on Ubuntu, Docker and Keycloak saving about $1000 for training and days worth of training
+        - Managed back-end issues by requesting ownership, saving 3-4 days of development effort per sprint
+        - Articulated system design for micro services during sprint planning based on customer feedback
+        - Setup local remote dev environment for team during a cyber-attack on the company that saved about 7 days of development setback
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://github.com/singh-sidharth/Cover-Letter-Template">Cover Letter Latex Template</a>
+      year: 2023-now
+      description: A simple Latex cover letter template for writing professional cover letters.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2023
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+        - Innovation Award
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Full stack development
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Badminton, Gym, Gaming
